<resources>
    <string name="super_doc_phone_number">1887151902</string>
    <string name="app_name">挂号平台</string>
    <string name="title_home">首页</string>
    <string name="title_empty" />
    <string name="title_profile">我的</string>
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_verification_code">验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="switch_login_method">切换登陆方式</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_goto_create_account">去注册</string>
    <string name="action_create_account">注册</string>
    <string name="invalid_phone">不是合法的手机号</string>
    <string name="invalid_password">不是合法的密码</string>
    <string name="invalid_verification_code">不是合法的验证码</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search_placeholder">搜索医院、科室、医生</string>
    <string name="profile_button_register">我的预约</string>
    <string name="profile_button_advisory">病历列表</string>
    <string name="profile_button_doctor">我的医生</string>
    <string name="profile_button_hospital">我的医院</string>
    <string name="home_fab_text">挂号</string>
    <string name="home_register_button">挂号</string>
    <string name="home_hospital_button">医院</string>
    <string name="home_register_history_button">挂号历史</string>
    <string name="home_recipe_button">病历</string>
    <string name="hospital_detail_introduction_title">医院介绍</string>
    <string name="hospital_detail_register_title">预约挂号</string>
    <string name="generic_schedule_limit_remain">总%1$d剩%2$d</string>
    <string name="user_comment">用户评论(%1$d)</string>
    <string name="comment_overview_title">综合评分(%1$.2f)</string>>
    <string name="update_user_info">更新用户信息</string>
    <string name="logout">登出</string>
    <string name="schedule_department">就诊科室</string>
    <string name="schedule_time">就诊时间</string>
    <string name="schedule_remain">号源剩余</string>
    <string name="register_schedule">提交预约</string>
    <string name="waiting_for_backend_complete">等待后端API完善</string>
    <string name="comment_to_register_button">评价</string>
    <string name="recipe_detail_button">详情</string>
    <string name="recipe_diag_label">诊疗结果:</string>
    <string name="recipe_suggestion_label">医嘱:</string>
    <string name="detail_button_label">检查结果和处方请查看详情</string>
    <string name="recipe_edit_button">编辑</string>
    <string name="edit_button_label">编辑处方请点击右侧按钮</string>
    <string name="recipe_submit_button">上传</string>
    <string name="success_msg">
"建议在预约时间提前15分钟到达预约科室候诊
带好证件和预约凭证
预约记录可在 我的 > 我的预约 栏目查看
"
    </string>
    <string name="hint_search_hospital_name">输入医院名搜索</string>
    <string name="normal_register">正常预约</string>
    <string name="identity_doctor">医生</string>
    <string name="need_login_toast_content">该功能需要登陆</string>
</resources>
