<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cn.hospital.registerplatform.ui.component.main.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_empty"
        android:name="cn.hospital.registerplatform.ui.component.profile.ProfileFragment"
        android:label="@string/title_empty"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="cn.hospital.registerplatform.ui.component.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>