<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="cn.hospital.registerplatform.data.dto.RecipeInfo" />

        <variable
            name="info"
            type="RecipeInfo" />

        <import type="cn.hospital.registerplatform.data.dto.UserInfo" />

        <variable
            name="userInfo"
            type="UserInfo" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/patient_info_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardCornerRadius="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/doctor_avatar"
                    android:layout_width="48dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginVertical="16dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:loadImage="@{userInfo.portrait}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@{userInfo.name}"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/doctor_avatar"
                    app:layout_constraintTop_toTopOf="@id/doctor_avatar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipe_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@{userInfo.phoneNumber}"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/user_name"
                    app:layout_constraintTop_toBottomOf="@id/user_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/info_leading_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/blue_500"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/ic_baseline_access_time_24"
            app:layout_constraintTop_toBottomOf="@id/patient_info_container"
            app:layout_constraintBottom_toTopOf="@id/diag_result_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/exam_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="12dp"
            app:loadText="@{info.date}"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/info_leading_icon"
            app:layout_constraintBottom_toBottomOf="@id/info_leading_icon"
            app:layout_constraintStart_toEndOf="@id/info_leading_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/diag_result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/recipe_diag_label"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/info_leading_icon"
            app:layout_constraintStart_toStartOf="@id/info_leading_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/diag_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{info.diag.substring(0, (info.diag.length() > 20 ? 20 : info.diag.length()))}"
            android:textColor="@color/black"
            android:textSize="12sp"

            app:layout_constraintTop_toTopOf="@id/diag_result_label"
            app:layout_constraintBottom_toBottomOf="@id/diag_result_label"
            app:layout_constraintStart_toEndOf="@id/diag_result_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/suggestion_result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24.5dp"
            android:layout_marginTop="12dp"
            android:text="@string/recipe_suggestion_label"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/diag_result_label"
            app:layout_constraintStart_toStartOf="@id/diag_result_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/suggestion_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{info.suggestion.substring(0, (info.suggestion.length() > 20 ? 20 : info.suggestion.length()))}"
            android:textColor="@color/black"
            android:textSize="12sp"

            app:layout_constraintTop_toTopOf="@id/suggestion_result_label"
            app:layout_constraintBottom_toBottomOf="@id/suggestion_result_label"
            app:layout_constraintStart_toEndOf="@id/suggestion_result_label" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_500"
            android:text="@string/recipe_detail_button"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/suggestion_result_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="116dp"
            android:backgroundTint="@color/blue_500"
            android:text="@string/recipe_edit_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/suggestion_result_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
