<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.component.login.ResetPwdActivity"
        android:background="@color/blue_100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="50dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".ui.component.login.NewUserActivity">

            <TextView
                android:id="@+id/phone_number_input_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:gravity="left"
                android:text="手机号"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/phone_number_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phone_number_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:hint="手机号"
                app:layout_constraintBottom_toTopOf="@id/verification_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_input_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/verification_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintBottom_toTopOf="@id/password_input_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_verification_code"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/send_verification_code2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send_verification_code2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/send_verification_code"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/verification_code"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/password_input_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:gravity="left"
                android:text="新密码"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/password_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verification_container"></TextView>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:hint="新密码"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input_text"
                app:layout_constraintBottom_toTopOf="@id/password_input_hint" />

            <TextView
                android:id="@+id/password_input_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:gravity="left"
                android:text="*密码长度>6,需包含数字和字母"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/reset_pwd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input"
                android:alpha="0.5"></TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reset_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="修改密码"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>